--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">NU_Deal</string>
+    <string name="app_name">NU Deal</string>
+    <string name="send_command">Send a command</string>
+    <string name="button_name">Send</string>
+    <string name="term_window">Terminal Window</string>
 </resources>
