--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="button_name">Send</string>
     <string name="term_window">Terminal Window</string>
     <string name="command_hint">bank 1</string>
+    <string name="blank"></string>
 </resources>
